--- a/demo/TestClient/index.html
+++ b/demo/TestClient/index.html
@@ -10,8 +10,8 @@
   <title>Azure Functions Graph Tutorial Test Client</title>
 
   <link rel="shortcut icon" href="g-raph.png">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css"
+        integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0"
         crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css"
         crossorigin="anonymous">
@@ -22,20 +22,20 @@
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container">
       <a href="/" class="navbar-brand">Azure Functions Graph Test Client</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
         aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
-        <ul id="authenticated-nav" class="navbar-nav mr-auto"></ul>
-        <ul class="navbar-nav justify-content-end">
-          <li class="nav-item">
-            <a class="nav-link" href="https://developer.microsoft.com/graph/docs/concepts/overview" target="_blank">
-              <i class="fas fa-external-link-alt mr-1"></i>Docs
-            </a>
-          </li>
-          <li id="account-nav" class="nav-item"></li>
-        </ul>
+          <ul id="authenticated-nav" class="navbar-nav me-auto flex-grow-1"></ul>
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="https://docs.microsoft.com/graph/overview" target="_blank">
+                <i class="fas fa-external-link-alt me-1"></i>Docs
+              </a>
+            </li>
+            <li id="account-nav" class="nav-item"></li>
+          </ul>
       </div>
     </div>
   </nav>
@@ -44,21 +44,16 @@
 
   </main>
 
-  <!-- Bootstrap/jQuery -->
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-          integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-          crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-          integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-          crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-          integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+  <!-- Bootstrap -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
+          integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8"
           crossorigin="anonymous"></script>
 
   <!-- MSAL -->
-  <script src="https://alcdn.msauth.net/browser/2.0.0/js/msal-browser.min.js"
-          integrity="sha384-n3aacu1eFuIAfS3ZY4WGIZiQG/skqpT+cbeqIwLddpmMWcxWZwYdt+F0PgKyw+m9"
+  <script src="https://alcdn.msauth.net/browser/2.14.2/js/msal-browser.min.js"
+          integrity="sha384-ggh+EF1aSqm+Y4yvv2n17KpurNcZTeYtUZUvhPziElsstmIEubyEB6AIVpKLuZgr"
           crossorigin="anonymous"></script>
+
 
   <script src="config.js"></script>
   <script src="ui.js"></script>
