--- a/TestClient/index.html
+++ b/TestClient/index.html
@@ -1,7 +1,6 @@
 <!-- Copyright (c) Microsoft Corporation.
      Licensed under the MIT License. -->
 
-<!-- <indexSnippet> -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,10 +9,8 @@
   <title>Azure Functions Graph Tutorial Test Client</title>
 
   <link rel="shortcut icon" href="g-raph.png">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css"
-        integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0"
-        crossorigin="anonymous">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css"
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
         crossorigin="anonymous">
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
@@ -30,9 +27,7 @@
           <ul id="authenticated-nav" class="navbar-nav me-auto flex-grow-1"></ul>
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="https://docs.microsoft.com/graph/overview" target="_blank">
-                <i class="fas fa-external-link-alt me-1"></i>Docs
-              </a>
+              <a class="btn btn-link nav-link" href="https://docs.microsoft.com/graph/overview" target="_blank">Docs</a>
             </li>
             <li id="account-nav" class="nav-item"></li>
           </ul>
@@ -45,13 +40,13 @@
   </main>
 
   <!-- Bootstrap -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
-          integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8"
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+          integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
           crossorigin="anonymous"></script>
 
   <!-- MSAL -->
-  <script src="https://alcdn.msauth.net/browser/2.14.2/js/msal-browser.min.js"
-          integrity="sha384-ggh+EF1aSqm+Y4yvv2n17KpurNcZTeYtUZUvhPziElsstmIEubyEB6AIVpKLuZgr"
+  <script src="https://alcdn.msauth.net/browser/2.26.0/js/msal-browser.min.js"
+          integrity="sha384-VdtLJ4gW9+dszXDbJEzdUFYI+xq4hXfOGntgGlDve3qz/5WEzWjLeN1voiro74af"
           crossorigin="anonymous"></script>
 
 
@@ -61,4 +56,3 @@
   <script src="azurefunctions.js"></script>
 </body>
 </html>
-<!-- </indexSnippet> -->
