--- a/TestClient/index.html
+++ b/TestClient/index.html
@@ -27,7 +27,7 @@
           <ul id="authenticated-nav" class="navbar-nav me-auto flex-grow-1"></ul>
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="btn btn-link nav-link" href="https://docs.microsoft.com/graph/overview" target="_blank">Docs</a>
+              <a class="btn btn-link nav-link" href="https://learn.microsoft.com/graph/overview" target="_blank">Docs</a>
             </li>
             <li id="account-nav" class="nav-item"></li>
           </ul>
